--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
+    "multer": "^1.4.2",
     "node": "^15.3.0"
   },
   "devDependencies": {
